@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.github.mtrevisan</groupId>
 	<artifactId>boxon</artifactId>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.1.1</version>
 
 	<packaging>jar</packaging>
 
 	<name>Boxon</name>
 	<description>Library for declarative, bit-level, parsing of a message</description>
 	<url>https://github.com/mtrevisan/Boxon</url>
-<!--	<logo>https://upload.wikimedia.org/wikipedia/commons/1/1d/Symmetricwave2.png</logo>-->
 
 	<developers>
 		<developer>
@@ -71,7 +70,7 @@
 
 		<!-- Spring Expression -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-expression -->
-		<springframework.spring-expression.version>5.3.14</springframework.spring-expression.version>
+		<springframework.spring-expression.version>5.3.15</springframework.spring-expression.version>
 
 		<!-- FreeMarker -->
 		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
@@ -258,16 +257,9 @@
 					<showDeprecation>true</showDeprecation>
 					<!--
 					  TODO:
-						 Remove after OSSRH-66257, NEXUS-26993 are fixed,
+						 Remove .mvn/jvm.config after OSSRH-66257, NEXUS-26993 are fixed,
 						 possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
 					-->
-					<fork>true</fork>
-					<compilerArgs>
-						<arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.text=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 			<!-- Help -->
